# fast-feedback

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  app.py  dockerfile  green_anole_data.ipynb  green_anole_print.py  pyproject.toml  requirements.txt
.github/workflows/: tosa-AutoDeployTrigger-0ec908db-4b01-4729-8208-d8d0506c52dc.yml  wauwatosa-AutoDeployTrigger-4771865b-188c-4883-8e93-e3cbbf6f1e00.yml
.streamlit/: secrets.toml.example
fast-client/: .env.example  README.md  docker-compose.yml  eddo_sample_setup.sql  package.json  pnpm-lock.yaml  tailwind.config.ts
fast-client/scripts/: add-samples.sh
fast-client/src/app/: layout.tsx  page.tsx
fast-client/src/components/: CommentThread.tsx  FeedbackQueueTable.tsx  SampleCard.tsx  TagManager.tsx
fast-client/src/lib/: db.ts
fast-client/supabase/: config.toml  seed.sql
frontend/: package-lock.json
frontend/app/: layout.tsx
frontend/components/: artifact-table.tsx  revisit-list.tsx  thread-panel.tsx
frontend/lib/: supa.ts  types.ts
notebooks/: green_anole_data.ipynb
src/fast/: __init__.py  assessment_feedback.py  green_anole.py  home.py  transcribe_images.py
streamlit-app/: .env.example  .env.local  README.md  app.py  dockerfile  green_anole_data_export_to_pdf.ipynb  pyproject.toml  schema.sql
streamlit-app/.streamlit/: secrets.toml.example
streamlit-app/data/: green_anole_data_anonymized.csv
streamlit-app/src/fast/: assessment_feedback.py  db_viewer.py  enriched_data.db  green_anole.py  green_anole_public.py
streamlit-app/supabase/: config.toml
(+18 files in other folders)
